k8s-deploy/okd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightrag
  namespace: lightrag-prod
  labels:
    app: lightrag
spec:
  type: ClusterIP
  ports:
  - port: 9621
    targetPort: 9621
    protocol: TCP
    name: http
  selector:
    app: lightrag
